# SentimentAnalysisAPI

./: .dockerignore  .gitignore  pyproject.toml
dockerfiles/: api.dockerfile
frontend/: app.py
src/sentiment_analysis_api/: build_model.py  main.py  test_main.py
