[project]
name = "sentimentanalysisapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "afinn>=0.1",
    "fastapi>=0.128.2",
    "httpx>=0.28.1",
    "openai>=2.17.0",
    "optimum[onnxruntime]>=2.1.0",
    "podman>=5.7.0",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.40.0",
    "vadersentiment>=3.3.2",
]
